# alignment-ecommerce

./: .env  .env.example  .gitignore  README.md  app.py  docker-compose.yml  find_attributes.py  get_database.py  ingest_elastic.py  ingest_mongo_db.py  pyproject.toml  requirements.txt  test.ipynb
.streamlit/: config.toml  secrets.toml
data/: attribute_names.json
docs/presentations/: midterm.html  midterm.md
src/chat/: Assistant.py  ChatContext.py  Message.py  avatars.py  initial_messages.py  llm.py
src/db/: Laptop.py  laptop_db.py
src/research/: ExperimentManager.py  Logging.py  link_to_survey.py  random_str.py
src/ui/: StreamedMessage.py  assistant_message.py  chat_input.py  chat_ui.py  not_found.py  redirect_button.py  show_message.py  title.py
